Fix language issues